--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,47 +6,27 @@
 body{
     
 }
-.logo{
-    margin-left: 10px;
+section{
+    width: 100vw;
+    height: 100vh;
 }
-.navbar{
-    /* background: #3c8d9e; */
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-}
-ul{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-ul a li{
-    list-style-type: none;
-    transition: 0.1s;
-}
-ul a li:hover{
-    transform: scale(1.1);
-    
-}
-ul a{
-    text-decoration: none;
-    color: white;
-    margin-right: 30px;
-}
+
 .container{
     height: 500px;
+    width: 500px;
     /* background: url(assets/backkidney.jpg); */
     background-size: cover;
-    text-align: center;
-    padding: 30px;
-    padding-top: 200px;
+    /* text-align: center; */
+    /* padding: 30px; */
+    /* padding-top: 200px; */
+    padding-left: 40px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap:50px;
-    color: black;
+    align-items: flex-start;
+    gap:20px;
+    margin-top: 220px;
+    color: white;
+    /* position: relative; */
 }
 .cta-button{
     background: #3c8d9e;
@@ -55,17 +35,58 @@ ul a{
     color: white;
     border-radius: 7px;
     cursor: pointer;
-    margin-top: 75px;
+    margin-top: 15px;
+    transition: 0.5s linear;
 }
-.features {
+.cta-button:hover{
+    background: #5dade2;
+    transform: scale(1.1);
+}
+#features {
   display: flex;
   justify-content: space-around;
   padding: 10px;
   gap:10px;
   margin: 50px 0px;
+  
 }
-
+/* #middle{
+    position: absolute;
+    padding-bottom: 60px;
+}
+#middle:hover{
+    animation-name: spin;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+} */
+/* @keyframes spin {
+    0%{
+        background-color: yellow;
+        transform: rotate(0deg);
+        
+    }
+    25%{
+        top: 700px;
+        right: 100px;
+        transform: rotate(360deg);
+    }
+    50%{
+        top: 500px;
+        
+        transform: rotate(360deg);
+    }
+    75%{
+        top: 300px;
+        transform: rotate(360deg);
+    }
+    100%{
+        background-color: green;
+        transform: rotate(360deg);
+    }
+} */
 .feature {
+  /* position: absolute; */
   background-color: #a7e2f3;
   border: 1px solid #ddd;
   border-radius: 10px;
@@ -77,6 +98,7 @@ ul a{
   
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+  height: 120px;
 }
 
 .feature:hover {
@@ -103,80 +125,10 @@ ul a{
     color: #555;
 }
 
-/* signin */
-.form{
-   /* background-color: #f0f8ff; */
-   
-   color: #4682b4;
-   min-height: 100vh;
-   width: 100%;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   font-size: 1.1rem;
-  
-}
 
-.f-con{
-   /* background-color: lightblue; */
-   border: 1px solid white;
-   /* background: rgba(0, 0, 0, 0.5); */
-   background-color: rgba(7, 31, 77, 0.3);
-   backdrop-filter: blur(10px);
-   box-shadow: 0px 0px 5px 2px white;
-   margin: 80px 0px;
-   width: 300px;
-   height: 60%;
-   padding: 40px;
-   border-radius: 15px;
-}
-.f-con h2{
-   text-align: center;
-   margin-bottom: 50px;
-   margin-top: 20px;
-}
-label{
-   display: block;
-   color:rgb(255, 255, 255);
-   margin-top: 50px;
-   font-weight: 100;
-margin-bottom: 10px;
-}
-input{
-   height: 40px;   
-   width: 100%;
-   text-align: center;
-   outline: none;
-   
-}
-.btn{
-   width: 100%;
-   height: 40px;
-   margin-top: 70px;
-   border-radius: 15px;
-   border: 1px solid gray;
-   background-color: #5dade2;
-   font-size: 14px;
-   font-weight: 400;
-   transition-duration: 0.2s;
-   cursor: pointer;
-}
-.btn:hover{
-   box-shadow: 0px 0px 5px 2px white;
-   transform: scale(0.9);
-}
-p{
-   text-align: center;
-   margin-top: 50px;
-   font-weight: 250;
-   font-size: 14px;
-}
-p a{
-   text-decoration: none;
-   color: white;   
-}
 .oc{
     background: url(assets/ba.jpeg);
-    background-size: cover;
+    background-size:auto;
     /* height: 150vh; */
+    width: 100%;
 }
